tests/NormalTests/paczka1/small_fuzzy/85386389.err
Error in line 2: 6xs2fjQW3h A249 38,0
Error in line 7: LYk1Me S487 23,1
Error in line 14: QIbbIm A249 43,3
